vlib/v/checker/tests/match_else_last_expr.v
fn main() {
	match 1 {
		1 { println('1') }
		else { println('else') }
		4 { println('4') }
	}
}
